fix build problem

--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -74,7 +74,9 @@
     </paper-dialog>
 
   </template>
+  <!--TODO put these in the regular build process-->
   <script src="../../lib/mpgen.js"></script>
+  <script src="../../lib/skillmap.js"></script>
   <script>
   function getProblemBySetId(id) {
     return getProblemFunction(id)();
