--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -1,5 +1,5 @@
 <link rel="import" href="elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html">
 <link rel="import" href="elements/problems-addition/problems-addition.html">
 
-<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
+<mjbe-drawing-canvas class="fit" ng-if="s.showCanvas"></mjbe-drawing-canvas>
 <problems-addition problemtype="{{s.type}}" complete="{{s.complete}}" event-namespace="s" bind-polymer></problems-addition>
