--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -67,8 +67,8 @@
 
     <paper-dialog id="dialog">
       Congratulations! You passed this module.
-      <paper-button class="backbutton" ui-sref="">
-        <paper-icon-button mini icon="arrow-back" ui-sref=""></paper-icon-button> Go back to Dashboard 
+      <paper-button class="backbutton" ui-sref="main">
+        <paper-icon-button mini icon="arrow-back" ui-sref="main"></paper-icon-button> Go back to Dashboard 
       </paper-button>
       <paper-button dialog-confirm class="practice">Keep Practicing</paper-button>
     </paper-dialog>
