fix not a function error on load

--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -79,7 +79,9 @@
   <script src="../../lib/skillmap.js"></script>
   <script>
   function getProblemBySetId(id) {
-    return getProblemFunction(id)();
+    try {
+      return getProblemFunction(id)();
+    } catch (e) {}
   }
   
   Polymer({
