--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,28 +1,4 @@
-<!-- <navbar></navbar>
-
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
-
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<footer></footer>
- -->
- 
-<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" event-namespace="main" bind-polymer></pie-status>
+<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadtree="{{main.treeData}}" active="{{main.activeNode}}" event-namespace="main" bind-polymer></pie-status>
 <div class="removethis">Skills complete:</div>
 <div ng-repeat="skill in main.skills">{{skill.skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
