--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadtree="{{main.treeData}}" active="{{main.activeNode}}" event-namespace="main" bind-polymer></pie-status>
+<pie-status userselection="{{main.userselection}}" loadskills="{{main.skillsData}}" loadtree="{{main.treeData}}" event-namespace="main" bind-polymer></pie-status>
 <div class="removethis">Skills complete:</div>
 <div ng-repeat="skill in main.skills">{{skill.skill.name}}</div>
 <link rel="import" href="elements/main-app/main-app.html">
