--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -42,4 +42,5 @@
 <link rel="import" href="mjbe-dashboard-classprogress/mjbe-dashboard-classprogress.html">
 <link rel="import" href="mjbe-dashboard-classprogress/mjbe-collapse-list.html">
 <link rel="import" href="mjbe-modifications/mjbe-modifications.html">
+<link rel="import" href="mjbe-timer/mjbe-timer.html">
 <link rel="import" href="auth-card/auth-card.html">
