--- a/client/elements/pie-status/pie-status.html
+++ b/client/elements/pie-status/pie-status.html
@@ -4,15 +4,40 @@
     <!--TODO this should maybe go through Angular to avoid multiple requests, but can't think of a good way to do that-->
     <!--<iron-ajax auto url="/api/skilltree" handle-as="json" on-response="handleResponse" last-response="{{treeResponse}}"></iron-ajax>
     <iron-ajax auto url="/api/skills" handle-as="json" on-response="drawPie" last-response="{{ajaxResponse}}"></iron-ajax>-->
-    <div id="holder">
-      <style include="shared-styles"></style>
-      <style>
-      :host {
-        display: block;
-      }
-      </style>
-      <h2 class="page-title"><span>{{greeting}}</span></h2>
-      <h2 class="page-title"><span>{{userselection}}</span></h2>
+    <style>
+    :host {
+      display: block;
+    }
+
+    #holder {
+      width: 50%;
+      right: 0;
+      position: absolute;
+    }
+
+    li {
+      width: 50%;
+      padding: 5px 20px;
+    }
+
+    .container {
+      transition: background-color 0.5s ease;
+      max-width: 1000px;
+      min-height: 800px;
+    }
+
+    .page-title {
+      margin: 0;
+      padding: 20px;
+      transition: background-color 0.5s ease;
+    }
+    </style>
+    <h2 class="page-title" style$="background-color: [[hovercolor]]">Go to: [[hoverselection]]</h2>
+    <div class="container" style$="background-color: [[hoverbackground]]">
+    <div id="holder"></div>
+    <template is="dom-repeat" items="{{skills}}">
+      <li>{{item.name}}</li>
+    </template>
     </div>
   </template>
   <script src="https://d3js.org/d3.v3.min.js"></script>
@@ -21,13 +46,17 @@
   Polymer({
     is: 'pie-status',
     properties: {
-      greeting: {
-        type: String,
-        value: 'Go to: ',
-        notify: true
+      hoverselection: {
+        type: String
+      },
+      hovercolor: {
+        type: String
+      },
+      hoverbackground: {
+        type: String
       },
       userselection: {
-        notify: true,
+        notify: true
       },
       skills: {
         computed: 'parseSkills(loadskills)',
@@ -58,6 +87,7 @@
         return JSON.parse(loadskills);
       } catch (e) {}
     },
+
     parseTree: function(loadtree) {
       try {       
         console.log('in polymer');
@@ -65,12 +95,33 @@
         return JSON.parse(loadtree);
       } catch (e) {}
     },
+
+    fadeDown: function(currentcolor) {
+      var rgb = currentcolor;
+      rgb = rgb.replace(/[^\d,]/g, '').split(',');
+      if(rgb.length < 3) {
+        rgb = [0,0,0];
+      }
+      var transformed = rgb.map(function(val){
+        val = val || 0;
+          if(~~val < 100) {
+            return ~~val + 100;
+          } else if (~~val + 40 < 255) {
+            return ~~val + 70;
+          } else {
+            return 255;
+          }
+      })
+      return 'rgb(' + transformed[0] + ','+ transformed[1] + ',' +transformed[2] + ')';
+    },
+
     drawPie: function() {
       console.log('got a response');
       console.log(this.skills);
       var data = this.skills;
+      var that = this;
 
-      var width = 800,
+      var width = 400,
         height = 400;
       var outerRadius = height / 2 - 20,
         innerRadius = outerRadius / 3,
@@ -86,7 +137,7 @@
         .attr("width", width)
         .attr("height", height)
         .append("g")
-        .attr("transform", "translate(" + width / 4 + "," + height / 2 + ")");
+        .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
       svg.selectAll("path")
         .data(pie(data))
         .enter().append("path")
@@ -95,15 +146,25 @@
         })
         .attr("d", arc)
         .style("fill", function() {
-          return '#' + Math.floor(Math.random() * 16777215).toString(16)
+          var color = '#' + Math.floor(Math.random() * 16777215).toString(16)
+          console.log(color);
+          return color;
         })
-        .on("mouseover", arcTween(outerRadius - 20, 0))
+        .on("mouseover", arcTween(outerRadius + 20, 0))
         .on("mouseout", arcTween(outerRadius, 150))
         .on("click", this.clickHandler.bind(this));
 
       function arcTween(outerRadius, delay) {
         return function() {
+
+          that.hovercolor = d3.select(this)[0][0].style.fill; //get color of current selection
+          that.hoverbackground = that.fadeDown(that.hovercolor);
+          console.log(that.hovercolor);
+
+
           d3.select(this).transition().delay(delay).attrTween("d", function(d) {
+            that.hoverselection = d.data.name;
+
             var i = d3.interpolate(d.outerRadius, outerRadius);
             return function(t) {
               d.outerRadius = i(t);
