--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,16 +1,16 @@
-<!-- 
-  .stretch-container {
-    width: 100%;
-    margin: 0 auto;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    text-align: center;
-    background-color: #4AD9D9;
-    display: block;
-    overflow: auto;
-  }-->
-  <div class="stretch-container">
-  <auth-card useremail="{{vm.user.email}}" userpass="{{vm.user.password}}" submitted="{{vm.submitted}}" event-namespace="vm" bind-polymer></auth-card>
+<div class="flex horizontal center-justified layout">
+  <div style="margin-top: 50px">
+    <auth-card bind-polymer
+      header="Sign In" 
+      useremail="{{vm.user.email}}" 
+      userpass="{{vm.user.password}}" 
+      signin="{{vm.signin}}" 
+      errormessage="{{vm.errormessage}}"
+      event-namespace="vm">
+    </auth-card>
+    <p style="text-align: center"><a ui-sref="signup">Create an account.</a></p>
+  </div>
+</div>
 
 <!--
 <div class="container">
