started signup page to reuse auth-card element

--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,3 +1,11 @@
+<div class="flex horizontal center-justified layout">
+  <div style="margin-top: 50px">
+    <auth-card header="Sign Up" useremail="{{vm.user.email}}" userpass="{{vm.user.password}}" submitted="{{vm.submitted}}" signUp="{{vm.signUp}}" event-namespace="vm" bind-polymer></auth-card>
+    <p style="text-align: center"><a ui-sref="signup">Create an account.</a></p>
+  </div>
+</div>
+
+
 <navbar></navbar>
 
 <div class="container">
