changed colors, project nickname

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -5,29 +5,37 @@
     padding-top: 25px;
     padding-bottom: 25px;
     text-align: center;
-    background-color: #4AD9D9;
+    background: #4AD9D9;
     display: block;
     overflow: auto;
   }
+
+  paper-button {
+    width: 20%;
+    margin: 0 36px;
+  }
 </style>
-<div class="stretch-container" style="background-color: #EFEFF4">
+<div class="stretch-container" style="background: #EFEFF4">
+  <div style="display: block; height: 50px"></div>
+  <p>Learn how learning should be learned when you're learning.</p>
   <h1 style="margin-bottom: 5px;">TORCHCADEMY</h1>
   <img src="http://icons.iconarchive.com/icons/icons8/windows-8/512/Sports-Olympic-Torch-icon.png" height="50" width="50" alt="">
+  <p>Learn how learning should be learned when you're learning.</p>
+  <div style="display: block; height: 50px"></div>
 </div>
-<div class="stretch-container" style="background-color: #393939">
-   <paper-button style="background: white" raised ui-sref="login">Sign In</paper-button>
+<div class="stretch-container" style="background: #393939">
+  <paper-button style="background: white" raised ui-sref="login">Sign In</paper-button>
   <paper-button style="background: white" raised ui-sref="signup">Sign Up</paper-button>
 </div>
-<div class="stretch-container" style="background-color: #EFEFF4">
+<div class="stretch-container" style="background: #EFEFF4">
   <h2>Not Your Ordinary Learning Experience</h2>
   <p>We make Khan Academy</p>
   <p>look like Yawn Academy</p>
 </div>
 
 
-<div class="stretch-container" style="background-color: #5AC8FA">
+<div class="stretch-container" style="background: #5AC8FA">
   <h2>Battle-Tested Problems</h2>
-
 
   <div class="horizontal around-justified layout">
     <paper-card heading="Algebra 1" elevation="1" animated-shadow="false">
@@ -47,12 +55,11 @@
     </paper-card>
   </div>
 
-
   <p><em>Algorithms concocted by Ben Pochily.</em></p>
 </div>
 
 
-<div class="stretch-container" style="background-color: #EFEFF4">
+<div class="stretch-container" style="background: #EFEFF4">
   <h2>Team Thesis</h2>
   <p>Mike.</p>
   <p>Ben.</p>
@@ -60,7 +67,10 @@
   <p>Jeff.</p>
   <p>Einstein.</p>
 </div>
-<div class="stretch-container"  style="background-color: #FFCC00">
-  <h2>Now what?</h2>
+<div class="stretch-container"  style="background: #FFCC00">
+  <h2>/giphy wat</h2>
   <p>You should join.</p>
+</div>
+<div class="stretch-container"  style="background: #222">
+  <p style="color: white">I'm a footer.</p>
 </div>
