--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -30,6 +30,7 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="../bower_components/paper-radio-group/paper-radio-group.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
