--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -71,7 +71,7 @@
     <paper-progress max="5" value="[[correctcount]]"></paper-progress>
     </paper-material>
 
-    <mjbe-timer class="timer"></mjbe-timer>
+<!--     <mjbe-timer class="timer"></mjbe-timer> -->
 
     <paper-dialog id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       Congratulations! You passed this module.
