--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<mjbe-dashboard loadclasses="{{classes}}" selected="{{selectedClass}}" bind-polymer></mjbe-dashboard>
+<!--<mjbe-dashboard loadclasses="{{classes}}" selected="{{selectedClass}}" bind-polymer></mjbe-dashboard>
 <div>Invite students:</div>
 <input type="text" ng-model="add">
 <select ng-model="addSelected">
@@ -14,4 +14,22 @@
 
 <div>Create new class:</div>
 <input type="text" ng-model="addClass">
-<input type="submit" ng-click="submitClass()"> 
+<input type="submit" ng-click="submitClass()"> -->
+
+<style is="custom-style">
+
+      full-page {
+        @apply(--layout-fit);
+      }
+    </style>
+
+<div>akruesilu</div>
+
+    <full-page></full-page>
+
+    <script>
+      /*document.addEventListener('WebComponentsReady', function() {
+        document.querySelector('full-page').show();
+      });*/
+    </script>
+
