--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -33,6 +33,13 @@
 <link rel="import" href="../bower_components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 
+<link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="../bower_components/paper-styles/shadow.html">
+<link rel="import" href="../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="../bower_components/paper-styles/typography.html">
+<link rel="import" href="shared-styles/shared-styles.html">
+
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
 <link rel="import" href="pie-status/pie-status.html">
