--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -23,13 +23,13 @@
       }
     </style>
 
-<div>akruesilu</div>
-
     <full-page></full-page>
 
     <script>
-      /*document.addEventListener('WebComponentsReady', function() {
+      document.addEventListener('WebComponentsReady', function() {
+        console.log('showing');
         document.querySelector('full-page').show();
-      });*/
+      });
+      document.querySelector('full-page').show();
     </script>
 
