anim working, cleanup

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -30,6 +30,7 @@
         console.log('showing');
         document.querySelector('full-page').show();
       });
+      console.log('showing main');
       document.querySelector('full-page').show();
     </script>
 
