--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -55,6 +55,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: calc(100% / 3);
       }
     </style>
+    <paper-tabs selected="0" scrollable>
+
+        <paper-tab style="color: white;">NUMBER ONE ITEM</paper-tab>
+        <paper-tab>ITEM TWO</paper-tab>
+        <paper-tab>THE THIRD ITEM</paper-tab>
+        <paper-tab>THE ITEM FOUR</paper-tab>
+        <paper-tab>FIFTH</paper-tab>
+        <paper-tab>THE SIXTH TAB</paper-tab>
+        <paper-tab>NUMBER SEVEN</paper-tab>
+        <paper-tab>EIGHT</paper-tab>
+        <paper-tab>NUMBER NINE</paper-tab>
+        <paper-tab>THE TENTH</paper-tab>
+        <paper-tab>THE ITEM ELEVEN</paper-tab>
+        <paper-tab>TWELFTH ITEM</paper-tab>
+
+      </paper-tabs>
 
     <template is="dom-repeat" items="[[config]]">
       <div class$="[[_computeTileClass(item.color)]]">
