--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </paper-tabs>
 
     <template is="dom-repeat" items="[[config]]">
-      <div class$="[[_computeTileClass(item.color)]]">
+      <div class="tile red-300">
         <span>[[item.value]]</span>
       </div>
     </template>
@@ -83,7 +83,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </dom-module>
 
 <script>
-console.log('loading animated grid');
   Polymer({
     is: 'animated-grid',
     behaviors: [
@@ -96,14 +95,7 @@ console.log('loading animated grid');
           return [
             {value: 1, color: 'blue'},
             {value: 2, color: 'red'},
-            {value: 3, color: 'blue'},
-            {value: 4, color: 'green'},
-            {value: 5, color: 'yellow'},
-            {value: 6, color: 'blue'},
-            {value: 7, color: 'red'},
-            {value: 8, color: 'green'},
-            {value: 9, color: 'yellow'},
-            {value: 10, color: 'red'}
+            {value: 3, color: 'blue'}            
           ]
         }
       },
