--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -19,13 +19,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: inline-block;
         float: left;
         vertical-align: top;
-        width: calc(100% / 6);
-        height: calc(100% / 3);
+        /*width: calc(100% / 6);
+        height: calc(100% / 3);*/
         @apply(--paper-font-title);
         @apply(--layout-vertical);
         @apply(--layout-center-center);
       }
-      .tile:nth-of-type(1) {
+      .d3 {
+        position:absolute;
+        height: 100%;
+        width: 40%;        
+      }
+      .list {
+        position:absolute;
+        left: 40%;
+        height: 80%;
+        width: 60%;
+      }
+       .mod {
+        position: absolute;
+        top: 80%;
+        left: 40%;
+        height: 20%;
+        width: calc(60%);
+      }
+      /*.tile:nth-of-type(1) {
         width: calc(100% / 3);
         height: calc(100% / 3 * 2);
       }
@@ -53,10 +71,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         left: calc(100% / 6);;
         width: calc(100% / 6);
         height: calc(100% / 3);
-      }
+      }*/
     </style>
     <paper-tabs selected="0" scrollable>
-
         <paper-tab style="color: white;">NUMBER ONE ITEM</paper-tab>
         <paper-tab>ITEM TWO</paper-tab>
         <paper-tab>THE THIRD ITEM</paper-tab>
@@ -72,14 +89,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       </paper-tabs>
 
-    <template is="dom-repeat" items="[[config]]">
+    <!--<template is="dom-repeat" items="[[config]]">
       <div class="tile red-300">
         <span>[[item.value]]</span>
       </div>
-    </template>
-
+    </template>-->
+     <div class="tile red-300 d3">
+        <span>[[item.value]]</span>
+      </div>
+      <div class="tile red-300 list">
+        <span>[[item.value]]</span>
+      </div>
+      <div class="tile red-300 mod">
+        <span>[[item.value]]</span>
+      </div>
   </template>
-
 </dom-module>
 
 <script>
@@ -121,9 +145,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         var nodeList = Polymer.dom(this.root).querySelectorAll('.tile');
         this.animationConfig['entry'][0].nodes = Array.prototype.slice.call(nodeList);
       });
-    },
-    _computeTileClass: function(color) {
-      return 'tile ' + color + '-300';
     }
   });
 </script>
