--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -25,8 +25,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .d3 {
         position:absolute;
+        background: var(--google-red-100);
         height: 100%;
-        width: 40%;        
+        width: 40%;
+        color: red;        
       }
       .list {
         position:absolute;
@@ -58,13 +60,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       </paper-tabs>
 
-    <div class="tile red-300 d3">
+    <div class="tile d3">
         <span>[[item.value]]</span>
       </div>
       <div class="tile red-300 list">
         <span>[[item.value]]</span>
       </div>
-      <div class="tile red-300 mod">
+      <div class="tile blue-300 mod">
         <span>[[item.value]]</span>
       </div>
   </template>
