displaying student list

--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -9,7 +9,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <dom-module id="animated-grid">
   <template>
-    <style include="shared-styles"></style>
     <style>
       :host {
         display: block;
@@ -66,7 +65,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <span>[[item.value]]</span>
       </div>
       <div class="tile  list">
-        <span>[[item.value]]</span>
+       <mjbe-collapse-list></mjbe-collapse-list> 
       </div>
       <div class="tile mod">
         <span>Modifications</span>
