improve list formatting

--- a/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
+++ b/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
@@ -26,6 +26,8 @@
     iron-list {
       padding-top: 1px;
       padding-bottom: 16px;
+      padding-left: 20px;
+      padding-right: 120px;
       -webkit-flex: 1 1;
       flex: 1 1;
       --iron-list-items-container: {
