anims working together

--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -126,6 +126,7 @@ Polymer({
       var nodeList = Polymer.dom(this.root).querySelectorAll('.tile');
       this.animationConfig['entry'][0].nodes = Array.prototype.slice.call(nodeList);
       this.playAnimation('toolbar');
+      this.playAnimation('entry');
     });
   }
 });
