--- a/client/elements/animated-grid/animated-grid.html
+++ b/client/elements/animated-grid/animated-grid.html
@@ -6,9 +6,9 @@
       background: #000;
     }
 
-    paper-tabs {
+    /*paper-tabs {
       height: 50px;
-    }
+    }*/
     
     .tile {
       display: inline-block;
@@ -31,16 +31,16 @@
       position: absolute;
       background: var(--google-green-100);
       left: 50%;
-      height: calc(80% - 50px);
+      height: 80%;
       width: 60%;
     }
     
     .mod {
       position: absolute;
       background: var(--google-blue-100);
-      top: calc(80% - 50px);
+      top: 80%;
       left: 50%;
-      height: calc(20% - 50px);
+      bottom: 0px;
       width: 60%;
     }
     </style>
