--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -24,5 +24,5 @@
     </style>
 
    <!-- <full-page></full-page>-->
-   <animated-grid></animated-grid>
+   <animated-grid loadclasses="{{classes}}"></animated-grid>
 
